# Gold_Price_Prediction

./: GOLD_PRICE_PRE.ipynb  README.md  app.py  features.pkl  preprocessor.pkl  preprocessor_1.6.1.pkl  pyproject.toml  requirements.txt
goldstock_csv/: goldstock v1.csv  goldstock v2.csv
static/: index.html  script.js  style.css
