[tool.poetry]
name = "gold-price-prediction"
version = "0.1.0"
description = "A FastAPI-based application for predicting gold prices."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pandas = "^1.5.0"
scikit-learn = "^1.3.0"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
